--- a/lifescript001/002-implementations/servers/lifescript/communication/src/main/webapp/i18n/en/tongueTwister.json
+++ b/lifescript001/002-implementations/servers/lifescript/communication/src/main/webapp/i18n/en/tongueTwister.json
@@ -20,8 +20,7 @@
       "id": "ID",
       "text": "Text",
       "language": "Language",
-      "difficultyLevel": "Difficulty Level",
-      "creator": "Creator"
+      "difficultyLevel": "Difficulty Level"
     }
   }
 }
